--- a/advanced.html
+++ b/advanced.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <title>Pinball Player's Hub</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
 <body>
@@ -21,7 +21,7 @@
     </nav>
     
     <section>
-        <h1>Advanced Strategies and Techniques </h1>
+        <h2>Advanced Strategies and Techniques </h2>
         <p>The Advanced Guide gives veterans the expanded knowledge needed to continue their pinball journey. However, this page still ensures that individuals of all backgrounds can keep enjoying pinball. It will cover the intracacies of gameplay, teaching the necessary flipper skills, etc. needed to keep your ball from draining. Thank you to Abe Flips for providing the tutorial videos!</p>
         <p>Tip: ALL of the techniques mentioned below can be combined or set up with eachother; doing so will set an evolving player up for the skilled handling/cradling of a ball.</p>
 
