--- a/beginner.html
+++ b/beginner.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <title>Pinball Player's Hub</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
 <body>
@@ -21,7 +21,7 @@
     </nav>
     
     <section>
-        <h1>Beginner's Guide to Pinball </h1>
+        <h2>Beginner's Guide to Pinball </h2>
         <p>The Beginner's Guide gives newcomers the foundational knowledge needed to start their pinball journey. This page ensures that individuals of all backgrounds can begin to enjoy pinball. It will cover the basics of gameplay, understanding the pinball machine layout, scoring, and tips for getting started. Thank you to Home Leisure Direct for providing the tutorial videos!</p>
 
         <h3>Basics</h3>
