--- a/events.html
+++ b/events.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <title>Pinball Player's Hub</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
 <body>
@@ -21,7 +21,7 @@
     </nav>
     
     <section>
-        <h1>Community and Events</h1>
+        <h2>Community and Events</h2>
         <p>The Community and Events section contains information on local pinball venues and upcoming tournaments/events in the state of Maryland</p>
 
         <h3>Pinbaltimore</h3>
